--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="KIT Labs"
+            android:text="Practice App"
             android:fontFamily="@font/comfortaabold"
             android:textSize="46dp"
             android:textColor="@color/white"
